# acme-config

./: README.md  env.manifest  justfile  pyproject.toml
.github/: copilot-instructions.md
admin/: refresh_credentials.sh
docs/: mkdocs.yml
docs/docs/: api.md  cheat_sheet.md  index.md  install.md  release_notes.md
src/acme_config/: __init__.py  _main.py  features.py  inspect.py  resolver.py  schema.py
src/acme_config/legacy/: README.md
tests/: test_features.py  test_inspect.py  test_schema.py
