[build-system]
requires = [ "setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_config"
version = "0.0.2"
description = "System to store application configuration"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3.12",
                "Programming Language :: Python :: 3.11",
                "Programming Language :: Python :: 3.10" ]
requires-python = ">=3.10"
dependencies = [ "python-dotenv", "boto3" ]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
ac = "acme_config._main:main"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[project.optional-dependencies]
dev = [
    "pytest", # for testing
    "uv", # for venv
    "mkdocs", # for documentation
    "mkdocs-material", # theme for mkdocs
    "mkdocstrings[python]", # mkdocs plugin to generate API docs from sources
    "jupyterlab", # for jupyter notebooks
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acme_config"]
# [tool.setuptools.package-data]