[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_config"
version = "0.1.0"
description = "App configuration framework: schema declaration, env/CLI resolution, feature flags"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.12"]
requires-python = ">=3.12"
dependencies = ["python-dotenv", "pydantic>=2.0", "pydantic-settings>=2.0"]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.urls]
homepage = "https://github.com/blackwhitehere/acme-config"
repository = "https://github.com/blackwhitehere/acme-config"

[project.optional-dependencies]
dev = [
    "pytest",
    "uv",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "ruff",
    "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acme_config"]
license-files = []

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["src/acme_config/legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.15.0",
]
